--- a/mystyle.css
+++ b/mystyle.css
@@ -53,13 +53,54 @@ html, body {
   margin-right: 300px;
 }
 
+.navBar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.navBar li {
+  float: left;
+  border-right: 1px solid #bbb;
+}
+
+.navBar a {
+  display: block;
+  padding: 8px;
+}
+
+.navBar li:last-child {
+  border-right: none;
+}
+
+.navBar li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+.navBar li a:hover {
+  background-color: purple;
+}
+
+.active {
+  background-color: #45B6FE;
+}
+
 a {
   font-size: 25px;
   text-decoration: none;
   color: black;
   font-size: 25px;
 }
-
 
 li {
   font-size: 20px;
