--- a/mystyle.css
+++ b/mystyle.css
@@ -1,7 +1,8 @@
 html, body {
   margin:0;
   padding:0;
-  background-color: #EAD595;
+  /*background-color: #EAD595;*/
+  background-color: purple;
   color: red;
   font-family: Helvetica, Arial, sans-serif;
 }
@@ -15,6 +16,8 @@ html, body {
   outline-style: solid;
   outline-color: #45B6FE;
   outline-width: 25px;
+  -webkit-background-clip: content-box;
+  background-clip: content-box;
 }
 
 .bio {
@@ -25,18 +28,26 @@ html, body {
 }
 
 .blackSection {
+  margin-top: -50px;
   background-color: black;
   color: #EAD595;
   list-style-position: inside;
   outline-style: solid;
   outline-color: black;
   outline-width: 20px;
+  -webkit-background-clip: content-box;
+  background-clip: content-box;
+  padding: 50px 0px 80px 0px;
 }
 
 .tanSection {
+  margin-top: -50px;
   background-color: #EAD595;
   color: black;
   list-style-position: inside;
+  -webkit-background-clip: content-box;
+  background-clip: content-box;
+  padding: 50px 0px 80px 0px;
 }
 
 .grid-container {
