--- a/mystyle.css
+++ b/mystyle.css
@@ -108,11 +108,14 @@ h2 span {
 
 .tempGrid {
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  margin-left: 300px;
-  margin-right: 300px;
-  /*margin-bottom: 100px;*/
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+/*  margin-left: 300px;
+  margin-right: 300px;*/
   text-align: center;
+}
+
+.tempGridItem {
+  margin-bottom: 30px;
 }
 
 /* || navBar styles */
@@ -157,4 +160,11 @@ h2 span {
 .active {
   background-color: #45B6FE; /*#EAD595*/;
   color: black;
+}
+
+#mapid {
+  height: 300px;
+  width: 100%;
+  margin-bottom: 100px;
+  text-align: center;
 }
