--- a/mystyle.css
+++ b/mystyle.css
@@ -1,9 +1,16 @@
+:root {
+  --mint: #AFEEEE;
+  /*--mint: #34E5FF;*/ /*sky blue crayola*/
+  --gray: black;
+  --white: #F4F1BB;
+  /*--white: #EAD595;*/ /* slightly more tan color, original*/
+}
+
 html, body {
   margin: 0;
   padding: 0;
-  /*background-color: #EAD595;*/
-  background-color: purple;
-  color: red;
+  /*background-color: var(--white);*/
+  color: var(--gray);
   font-family: Helvetica, Arial, sans-serif;
 }
 
@@ -62,37 +69,40 @@ h2 span {
 }
 
 .Header {
-  background-color: #45B6FE;
+  background-color: var(--mint);
   color: black;
   text-align: center;
   padding: 25px 60px 25px 60px;
   margin-top: 57px;
-/*  border: 5px solid red;*/
 }
 
 .bio {
   text-align: center;
   font-size: 20px;
   margin-left: 300px;
-  margin-right:300px;
+  margin-right: 300px;
 }
 
-.blackSection {
-  background-color: black;
-  color: #EAD595;
+/*.section {
   list-style-position: inside;
-  /*border: 5px solid red;*/
   vertical-align: top;
   display: inline-block;
   width: 100%;
-  scroll-behavior: 
+}
+*/
+.blackSection {
+  background-color: var(--gray);
+  color: var(--white);
+  list-style-position: inside;
+  vertical-align: top;
+  display: inline-block;
+  width: 100%;
 }
 
 .tanSection {
-  background-color: #EAD595;
-  color: black;
+  background-color: var(--white);
+  color: var(--gray);
   list-style-position: inside;
-/*  border: 5px solid red;*/
   vertical-align: top;
   display: inline-block;
   width: 100%;
@@ -109,8 +119,6 @@ h2 span {
 .tempGrid {
   display: grid;
   grid-template-columns: repeat(2, minmax(0, 1fr));
-/*  margin-left: 300px;
-  margin-right: 300px;*/
   text-align: center;
 }
 
@@ -124,7 +132,7 @@ h2 span {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: black;
+  background-color: var(--gray);
   position: fixed;
   top: 0;
   width: 100%;
@@ -133,7 +141,7 @@ h2 span {
 
 .navBar li {
   float: left;
-  border-right: 1px solid #EAD595;
+  border-right: 1px solid var(--white);
 }
 
 .navBar a {
@@ -147,20 +155,20 @@ h2 span {
 
 .navBar li a {
   display: block;
-  color: #EAD595;
+  color: var(--white);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 .navBar li a:hover {
-  text-decoration: underline overline #45B6FE;
+  text-decoration: underline overline var(--mint);
 }
 
-.active {
-  background-color: #45B6FE; /*#EAD595*/;
+/*.active {
+  background-color: var(--mint);
   color: black;
-}
+}*/
 
 #mapid {
   height: 300px;
