Added original blue color in comments

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,6 @@
 :root {
   --mint: #AFEEEE;
+  /*#45B6FE original blue color*/
   /*--mint: #34E5FF;*/ /*sky blue crayola*/
   --gray: black;
   --white: #F4F1BB;
