--- a/main.css
+++ b/main.css
@@ -2,16 +2,46 @@ html {
     background-color: rgb(21, 26, 41);
 }
 
+html,
+body {
+    margin: 0;
+    height: 100%;
+}
+
 p {
     color: white;
 }
 body {
     font-family: "Roboto", sans-serif;
     font-weight: 400; /* Regular weight */
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
     color: white;
+}
+
+.navigation-bar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.section-links {
+    display: flex;
+    justify-content: right;
+    align-items: right;
+    grid-template-columns: auto auto auto auto auto;
+    column-gap: 2em;
+}
+
+.subtext-wrapper {
+    display: flex;
+    flex-flow: column;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
 .front-page-name {
@@ -22,14 +52,15 @@ h1 {
 
 .front-page-subtext {
     display: flex;
+    flex-direction: column;
+    flex: 1;
     justify-content: center;
+    text-align: center;
     align-items: center;
 }
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto;
-    row-gap: 20px;
 }
 
 .grid-item {
